<resources>
    <string name="app_name">GroupBudget</string>
    <string name="action_settings">Settings</string>
    <string name="pop">Pop</string>
    <string name="submit">Submit</string>
    <string name="add_a_group_name_here">Add a group name here</string>
    <string name="add_group">add group</string>

    <string name="EmptyGroupListPreview">Add new Group</string>
    <string name="txt_groupMembersHeader">Members:</string>
    <string name="btn_add_member">Add Member</string>
    <string name="txt_eventsHeader">Events:</string>
    <string name="btn_add_event">Add Event</string>
    <string name="EmptyMemberListPreview">Add new Member</string>
    <string name="members_header">Members:</string>
    <string name="EmptyEventListPreview">Add new Event</string>
    <string name="event_header">Events:</string>
</resources>
