<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Group">

    <TextView
        android:id="@+id/GroupName"
        android:layout_width="267dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:text="Value"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/txt_membersHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/members_header"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#6D0C0A0A"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GroupName" />

    <ScrollView
        android:id="@+id/scrollableMembers"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_membersHeader">

        <ListView
            android:id="@+id/listview_MemberList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollIndicators="right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            tools:layout_editor_absoluteY="142dp"/>
    </ScrollView>

    <TextView
        android:id="@+id/txt_EmptyMembersPlaceHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:paddingTop="16dp"
        android:text="@string/EmptyMemberListPreview"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#6D0C0A0A"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/scrollableMembers">
    </TextView>

    <Button
        android:id="@+id/add_member_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#009688"
        android:text="Add Member"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_EmptyMembersPlaceHolder" />

    <TextView
        android:id="@+id/txt_eventsHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/event_header"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#6D0C0A0A"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_member_btn" />

    <ScrollView
        android:id="@+id/scrollableEvents"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_eventsHeader">

        <ListView
            android:id="@+id/listview_EventList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            tools:layout_editor_absoluteY="142dp"/>
    </ScrollView>

    <TextView
        android:id="@+id/txt_EmptyEventsPlaceHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:paddingTop="16dp"
        android:text="@string/EmptyEventListPreview"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#6D0C0A0A"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/scrollableEvents">
    </TextView>

    <Button
        android:id="@+id/addEventBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#009688"
        android:text="Add Event"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_EmptyEventsPlaceHolder" />


    //////
    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="Momenteel is er nog geen activiteit vast gesteld"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addEventBtn" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="238dp"
        android:layout_height="27dp"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="aantal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="238dp"
        android:layout_height="27dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="bedrag"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="166dp"
        android:layout_height="27dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="Group members:"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="166dp"
        android:layout_height="27dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="Each person needs to pay:"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/goBackBtn"
        android:layout_width="132dp"
        android:layout_height="65dp"
        android:layout_marginBottom="24dp"
        android:background="#009688"
        android:text="Go Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>